<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cognitive</string>
    <string name="start_game">Start Game</string>
    <string name="data">Trials Data</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="touch_to_start">TOUCH HERE TO START</string>
    <string name="trials">Trials</string>
    <string name="set">Set</string>
    <string name="chT">chT</string>
    <string name="mvT">mvT</string>
    <string name="gameover_dialog_tip">Game Over!</string>
    <string name="gameover_dialog_text_poolguy">Pool Guy !</string>
    <string name="gameover_dialog_text_notbad">Not Bad !</string>
    <string name="gameover_dialog_text_awesome">Awesome !</string>
    <string name="gameover_dialog_text_newrecord">New Record !</string>
    <string name="gameover_dialog_positive_button">Restart</string>
    <string name="gameover_dialog_negative_button">Back</string>
    <string name="gameover_dialog_textview_best_record">Best Record:</string>
    <string name="gameover_dialog_textview_current_record">Current Record:</string>
    <string name="options_sounds_summary">-Play Background Sounds.</string>
    <string name="options_vibrate_summary">-Action Vibrate Effect.</string>
    <string name="options_showtips_summary">-Show Tips.</string>
    <string name="options_okay_summary">Okay</string>
    <string name="options_upload_score_summary">Post Scores</string>
    <string name="options_tips_summary">Tips</string>
    <string name="tips_text">1. Cognitive is a kind of simple game which can test your reaction and color-brain.\n\n2. Identify the blocks of color and press them as soon as possible.\n\n3. Wrong choice will result in restart game from first stage. Good Luck!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="graph">Graph</string>
    <string name="clear">Clear</string>
    <string name="title_activity_data__set__trials_">Data_Set_Trials_Activity</string>
    <string name="title_activity_data__ch_t__trials_">Data_ChT_Trials_Activity</string>
    <string name="title_activity_data__mv_t__trials_">Data_MvT_Trials_Activity</string>
    <string name="go">Go!</string>

</resources>
