<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/bg_game" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:paddingTop="5dip">
	
    	<ImageView
    	    android:layout_width="match_parent"
    	    android:layout_height="250dip"
    	    android:contentDescription="@string/app_name"
    	    android:gravity="center"
    	    android:orientation="vertical"
    	    android:scaleType="centerInside"
    	    android:src="@drawable/game_logo" />
    	
		<LinearLayout android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:layout_gravity="center"
			android:layout_marginTop="34dip">
			<Button android:id="@+id/start_game" android:layout_width="193dip"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:text="@string/start_game" android:textColor="#FF292066"
				android:textSize="17sp" android:padding="8dip" android:background="@drawable/button_style1"
				android:layout_marginBottom="3dip" />
			<Button android:id="@+id/data" android:layout_width="193dip"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:text="@string/data" android:textColor="#FF292066"
				android:textSize="17sp" android:padding="8dip" android:background="@drawable/button_style2"
				android:layout_marginBottom="3dip" />
			<Button android:id="@+id/options" android:layout_width="193dip"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:text="@string/options" android:textColor="#FF292066"
				android:textSize="17sp" android:padding="8dip" android:background="@drawable/button_style3"
				android:layout_marginBottom="3dip" />
			<Button android:id="@+id/exit" android:layout_width="193dip"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:text="@string/exit" android:textColor="#FF292066"
				android:textSize="17sp" android:padding="8dip" android:background="@drawable/button_style5"
				android:layout_marginBottom="3dip" />
		</LinearLayout>

</FrameLayout>